légères modifications des paramètres de la partie, et mise à jour du README